--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,12 +1,17 @@
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 220px;
-  min-height: 100vh;
-  background: #fff;
+  height: 100%;
+  background: #ffffff;
   border-right: 1px solid #eee;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  z-index: 1000;
+  overflow-y: auto;
 }
 
 .profile {
@@ -14,12 +19,12 @@
 }
 
 .profile-pic {
-  width: 70px;
-  height: 70px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   object-fit: cover;
-  margin-bottom: 10px;
-  border: 2px solid #ddd;
+  margin-top: 30px;
+  border: 2px solid #bab6b6;
 }
 
 .nav-links {
@@ -36,7 +41,7 @@
 .nav-links a {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
   text-decoration: none;
   color: #555;
   padding: 10px 15px;
@@ -56,4 +61,6 @@
 
 h3 {
     color: #000;
+    font-size: 25px;
+    margin-bottom: 10px;
 }
