--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: inherit;
+  background-color: inherit;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -65,4 +67,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.main-content {
+  margin-left: 290px;
+  padding: 20px;
 }
