--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,16 @@ body {
   min-width: 320px;
   min-height: 100vh;
   font-family: inherit;
-  background-color: inherit;
+  background-color: rgb(236, 231, 231);
   display: flex;
   flex-direction: column;
+  color: #1a1a1a;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #1a1a1a;
 }
 
 button {
@@ -72,4 +74,5 @@ button:focus-visible {
 .main-content {
   margin-left: 290px;
   padding: 20px;
+  
 }
