--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -40,7 +40,7 @@
   border-radius: 8px;
   font-size: 1rem;
   cursor: pointer;
-  color: white;
+  color: black;
   transition: background-color 0.2s ease-in-out;
   padding: 18px;
 }
