--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&family=Dancing+Script:wght@400..700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Knewave&family=Lobster&family=Lora:ital,wght@0,400..700;1,400..700&family=Pacifico&family=Reenie+Beanie&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
 
-body {
-  margin: 0;
+.container {
+  margin: 150px;
   font-family: "Fira Sans", sans-serif;
-  background-color: #f0f4f9;
+  /* background-color: #f0f4f9; */
   display: flex;
   justify-content: center;
   align-items: center;
