--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -19,11 +19,12 @@
 }
 
 .profile-pic {
-  width: 130px;
-  height: 130px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   object-fit: cover;
-  margin-top: 30px;
+  margin-top: 10px;
+
   border: 2px solid #bab6b6;
 }
 
@@ -60,7 +61,11 @@
 }
 
 h3 {
-    color: #000;
-    font-size: 25px;
-    margin-bottom: 10px;
+  color: #000;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.logo {
+  width: 200px;
 }
