--- a/src/components/SignUpForm/auth.css
+++ b/src/components/SignUpForm/auth.css
@@ -1,36 +1,45 @@
-
-
-/* body {
-  margin: 0;
-  font-family: "Fira Sans", sans-serif;
-  background-color: #f0f4f9;
+/* Center page */
+.auth-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-} */
+  justify-content: center;
+  min-height: 100vh;
+  background: #f3f4f6;
+}
 
 .auth-form {
   max-width: 400px;
+  width: 100%;
   background-color: white;
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+  text-align: center;
+}
+
+.auth-logo {
+  width: 170px;
+  height: 60px;
+  margin-bottom: 10px;
 }
 
 .auth-title {
   margin: 0 0 20px;
-  text-align: center;
-  color: #1e3a8a; 
+  color: black; 
   font-size: 30px;
 }
 
-.auth-input {
+.auth-input,
+.auth-file {
   width: 93%;
   padding: 12px 14px;
   margin: 10px 0;
   border: 1px solid #cbd5e1;
   border-radius: 8px;
   font-size: 15px;
+  background-color: white;
+  color: black;
 }
 
 .auth-input::placeholder {
@@ -41,21 +50,11 @@
   box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.25);
 }
 
-.auth-file {
-   padding: 8px; 
-    cursor: pointer;
-    border: 1px solid #cbd5e1;
-    border-radius: 8px;
-    width: 93%;
-    padding: 12px 14px;
-    margin: 10px 0;
-}
-
 .auth-button {
   width: 100%;
   padding: 12px;
   margin-top: 10px;
-  background-color: #3b82f6;
+  background-color: #6c63ff;
   border: none;
   border-radius: 8px;
   color: white;
@@ -64,7 +63,31 @@
   transition: background-color 0.2s ease;
 }
 .auth-button:hover {
-  background-color: #2563eb;
+  background-color: #8b85fc;
+}
+
+.auth-link {
+  margin-top: 15px;
+  font-size: 14px;
+  color: #374151;
+}
+.auth-link span {
+  color: #3b82f6;
+  cursor: pointer;
+  font-weight: 500;
+}
+.auth-link span:hover {
+  text-decoration: underline;
+}
+
+.auth-label {
+  display: flex;
+  flex-direction: column; /* stack label above input */
+  align-items: flex-start; /* align label text to the left */
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  color: #333;
 }
 
 
